--- a/scss/components/_search.scss
+++ b/scss/components/_search.scss
@@ -20,7 +20,6 @@
             background-color: $white;
             border: 1px solid #e5e5e5;
             border-color: #ccc;
-            border-radius: 2px;
             box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
             padding: 5px 15px;
             line-height: 22.85px;
@@ -29,6 +28,15 @@
                 outline: 0;
                 box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(91,192,222,.6);
             }
+        }
+
+        @include mq('1024') {
+            display: none;
+        }
+
+        @include mq('xl') {
+            display: block;
+            width: 240px;
         }
     }
     
@@ -39,14 +47,17 @@
         padding: 5px 20px;
         height: 56px;
         font-size: 1.063rem;
-        border-radius: 3px;
         border: none;
+        border-radius: 0 3px 3px 0;
         vertical-align: bottom;
         background-color: $grey-l;
         color: $white;
         font-size: 23px;
         &:hover {
             background-color: darken($grey-l, 10%);
+        }
+        @include mq('1024') {
+            border-radius: 3px;
         }
     }
 
