--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,13 +1,13 @@
 .main {
     position: relative;
     width: 100%;
-    height: 100%;
+    // height: 100%;
     z-index: 9999;
     background-color: $white;
     overflow-x: hidden;
     &.opened {
         left: -275px;
-        overflow-y: hidden;
+        overflow-y: scroll;
         &::after {
             content: "";
             position: absolute;
